fix projects flex-wrap add important

--- a/src/components/Pages/LandingPage/LandingPage.css
+++ b/src/components/Pages/LandingPage/LandingPage.css
@@ -668,7 +668,7 @@ small {
 
   .projects-wrapper .col {
     flex: 1 1 100%;
-    flex-wrap: nowrap;
+    flex-wrap: nowrap !important;
     padding-top: 3vh;
     padding-bottom: 10vh;
     max-width: 100vw;
